deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      enableServiceLinks: false
      imagePullSecrets:
        - name: regcred
      containers:
        - name: hello-flask
          image: hello-flask
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8000
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: hello-flask
  labels:
    app: hello-flask
spec:
  selector:
    app: hello-flask
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-flask
  annotations:
    kubernetes.io/ingress.class: shared
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik.codemowers.ee
spec:
  rules:
  - host: hello-lauri.codemowers.ee
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-flask
            port:
              number: 8000
  tls:
  - hosts:
    - "*.codemowers.ee"
